<resources xmlns:tools="http://schemas.android.com/tools"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
     tools:ignore="MissingTranslation">
    <string name="app_name">Btalk</string>
    <string name="launcherDialer">Phone</string>
    <string name="launcherMessage">Message</string>
    <string name="title_tab_phone">Phone</string>
    <string name="title_tab_recents_call">Recents</string>
    <string name="title_tab_messages">Messages</string>
    <string name="title_tab_contacts">Contacts</string>
    <string name="title_tab_setting_tab">Change color tab</string>
    <string name="title_set_as_default_sms">To send sms, set Btalk as the default SMS app</string>
    <string name="title_change">Change</string>
    <string name="notify_btalk_as_sms_default">Btalk as the default SMS app</string>
    <string name="notify_btalk_not_as_sms_default">Btalk not as the default SMS app</string>
    <string name="menu_text_search_sms">Search sms</string>
    <string name="menu_text_attach_contact">Attach contact</string>
    <string name="menu_text_add_subject">Add subject</string>
    <string name="media_chooser_emoticon">Emoticon</string>
    <string name="media_chooser_contact">Contact</string>
    <string name="media_chooser_location">Location</string>
    <string name="contact_chooser_search_title">Search contact</string>
    <string name="split_number_date">\u0020\u0020-\u0020\u0020</string>
    <string name="link_map" translatable="false">%1$s\n%2$s\nhttps://maps.google.com/maps?q=%3$s,%4$s</string>
    <string name="network_issue">Not networking</string>
    <string name="gps_issue">Not GPS avariable</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="btn_try_again">Try again!</string>
    <string name="invalid_contact">Invalid contact</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="search_sms_hint">Search message</string>
    <string name="hint_open_search">All message search appear here!</string>
    <string name="hint_not_found_message">Not found messages!</string>
    <string name="option_call">Call</string>
    <string name="option_text">Send message</string>
    <string name="option_mail">Send email</string>
    <string name="option_add_contact">Add contact</string>
    <string name="option_copy">Copy</string>
    <string name="option_edit">Open digit ime</string>
    <string name="option_show_avatar">Show avatar in a message</string>
    <string name="option_show_details">Show details in a message</string>
    <string name="option_show_info_sim">Show information sim of a conversation</string>
    <string name="option_show_avatar_key" translatable="false">show_avatar_in_message</string>
    <string name="option_show_details_key" translatable="false">show_details_in_message</string>
    <string name="option_show_info_sim_key" translatable="false">show_info_sim_in_conversation</string>
    <string name="option_symmetry_box_message_key" translatable="false">symmetry_box_message</string>
    <string name="toast_show_has_not_connect_3g">Please turn on mobile data to send MMS message!</string>
    <string name="action_mark_all_read">Mark all as read</string>
    <string name="progress_mark_all_message">Marking as read all messages</string>
    <string name="missing_storage_permission">You have a recorded call, to save it as mms message, please allow Btalk to access the device\'s memory.</string>
    <string name="allow">Allow</string>
    <plurals name="recentCalls_timeInSeconds">
        <item quantity="one">1 sec ago</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g>    secs ago</item>
    </plurals>
    <plurals name="recentCalls_timeInMinutes">
        <item quantity="one">1 min ago</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g>            mins ago</item>
    </plurals>
    <string name="day_of_week_long_sunday">Sunday</string>
    <string name="day_of_week_long_monday">Monday</string>
    <string name="day_of_week_long_tuesday">Tuesday</string>
    <string name="day_of_week_long_wednesday">Wednesday</string>
    <string name="day_of_week_long_thursday">Thursday</string>
    <string name="day_of_week_long_friday">Friday</string>
    <string name="day_of_week_long_saturday">Saturday</string>
    <string name="day_of_week_long_today">Today</string>
    <string name="toolbar_recent_all_upper">All</string>
    <string name="toolbar_recent_missed_upper">Missed</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_show_call_detail">View call logs</string>
    <string name="action_show_all_call_detail">View contact\'s call logs</string>
    <string name="action_share_contact_via">Share contact via</string>
    <string name="action_remove_in_call_log">Delete call log</string>
    <string name="action_clear_in_call_log">Delete all logs of this number</string>
    <string name="action_call_by_sim">Call by SIM %1$s &lt;%2$s&gt;</string>
    <string name="dialog_phone_send_prohibited_message">Can\'t call this number</string>
    <string name="toast_warn_cannot_send_message">Error: Cannot send message.  Please provide conference recipients.</string>
    <string name="btalk_dialpad_star_letters">,</string>
    <string name="btalk_dialpad_pound_letters">;</string>
    <string name="recentCalls_deleteAll">Clear recents</string>
    <string name="bkav_tooltip_magicpad_message">Tips: To <b>perform quick search</b> for desired contact, just press the number corresponding to <b>the first letter</b> of the name, e.g \'3 2 3\' -> \'Dad\'</string>
    <string name="btalk_tooltip_magicpad_not_show_again">Not show again</string>
    <string name="count_show_tooltip_dialpad">count_show_tooltip_dialpad</string>
    <string name="tooltip_pref_show_dialpad">show_tooltip_dialpad</string>
    <string name="tooltip_times_use_message">count_use_tooltip_message</string>
    <string name="tooltip_times_use_contact">times_use_tooltip_contact</string>
    <string name="btalk_compose_message_view_hint_text_multi_sim"><i>Send from %1$s</i></string>
    <string name="btalk_title_nav_header">Settings</string>
    <string name="btalk_hint_compose_message_not_multi_sim"><i>Typing your message</i></string>
    <string name="btalk_notify_not_make_a_call">Can\'t make a call because too many participants or not phone number</string>
    <string name="requires_default_sms_app_to_send">To send, set Btalk as the default SMS app</string>
    <string name="requires_default_sms_app">Set Messaging as the default SMS app</string>
    <string name="menu_label_new_message">New message</string>
    <string name="menu_label_favorite">Favorites</string>
    <string name="menu_label_add_contact">Add contact</string>
    <string name="description_show_more">Show more contact</string>
    <string name="record_incoming_call">Record incoming call</string>
    <string name="record_outgoing_call">Record outgoing call</string>
    <string name="notify_recoding_call">The call is recorded and saved in message box</string>
    <string name="notify_chooser_app_set_ringtone">Pick app to set ringtone for this contact</string>
    <string name="notify_complete_set_ringtone">This contact seted ringtone</string>
    <string name="notify_empty_contact_new_message">Contact is empty</string>
    <string name="notify_empty_contact_find">No contact found</string>
    <string name="toast_cannot_call_without_number">Info empty</string>
    <string name="touch_to_call">Touch to call</string>
    <string name="recentCalls_edit_call_log">Edit call log</string>
    <string name="title_merge_by_name">Merge by name</string>
    <string name="title_merge_by_phone">Merge by phone</string>
    <string name="title_merge_by_mail">Merge by mail</string>
    <string name="sum_pref_open_app">Save tab position when app exit</string>
    <string name="header_title_setting_open_app">App opening settings</string>
    <string name="sum_pref_call_button">Display 2 call buttons for 2 simcards</string>
    <string name="header_title_setting_speed_dial">Speed Dial Settings</string>
    <string name="toast_copy_contact">Have copied the contacts</string>
    <string name="toast_delete_calls_complete"> calls have removed</string>
    <string name="notify_not_permission">Application has not been granted access to storage. Call recording will not be saved as a message. To change permissions go to Settings> Applications> Btalk> Permissions</string>
    <string name="allCallDetailTitle">All call details</string>
    <string name="message_request_permission">To enable this feature, press on APP SETTINGS below and activate Contacts, Phone in Permissions.</string>
    <string name="title_request_permission">Allow Btalk to use Contacts, Phone state</string>
    <string name="positive_title_request_permission">APP SETTINGS</string>
    <string name="negative_title_request_permission">NOT NOW</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Btalk > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Btalk, Permissions.</string>
    <string name="required_permissions_promo">Btalk needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_audio">Allow Btalk to use Microphone</string>
    <string name="enable_permission_audio_summary">To enable this feature, press on APP SETTINGS below and activate Microphone in Permissions.</string>
    <string name="enable_permission_camera">Allow Btalk to use Camera</string>
    <string name="enable_permission_camera_summary">To enable this feature, press on APP SETTINGS below and activate Camera in Permissions.</string>
    <string name="enable_permission_gallery">Allow Btalk to use Phone storage</string>
    <string name="enable_permission_gallery_summary">To enable this feature, press on APP SETTINGS below and activate Storage in Permissions.</string>
    <string name="quick_response_title">Quick Response</string>
    <string name="quick_response_edit_title">Edit quick responses</string>
    <string name="quick_response_ok">OK</string>
    <string name="quick_response_goodnight">GoodNight!</string>
    <string name="quick_response_wait">Wait for me a few minutes.</string>
    <string name="quick_response_what_up">What\'s up?</string>
    <string name="add_response_title">Add quick message</string>
    <string name="add_response_hint">Content</string>
    <string name="notify_empty_response_content">Response content can\'t empty!</string>
    <string name="btalk_title_dialog_choose_number">Choose number</string>
    <string name="other_telephone_exchange">Telephone Exchange</string>
    <string name="police_text">Police</string>
    <string name="ambulance_text">Ambulance</string>
    <string name="rescue_text">Rescue</string>
    <string name="firefighting_text">Firefighting</string>
    <string name="display_name_date_format">\?DATE:</string>
    <string name="copy_done_suggest">Copy done!</string>
    <string name="dont_support_quick_response">Don\'t support show quick response in screen current mode</string>
    <string name="mute_conversion_15_minutes">For 15 Minutes</string>
    <string name="mute_conversion_1_hour">For 1 Hour</string>
    <string name="mute_conversion_8_hour">For 8 Hour</string>
    <string name="mute_conversion_24_hour">For 24 Hour</string>
    <string name="mute_conversion_until_at_7h_50_am">Until alarm at 7:50 AM</string>
    <string name="mute_conversion_until_turn_on">Until I turn it back on</string>
    <string name="setting_title">Settings</string>
    <string name="setting_phone">Phone</string>
    <string name="setting_message">Message</string>
    <string name="setting_contact">Contact</string>
</resources>