<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/background_setting_menu"
        android:layout_width="@dimen/setting_menu_width"
        android:layout_height="@dimen/setting_menu_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="6dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_title"
                android:textColor="@color/setting_title"
                android:textSize="@dimen/setting_title_text_size"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_icon"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="22dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_icon"
                android:src="@drawable/ic_phone_red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_phone"
                android:textColor="@color/setting_text_color"
                android:layout_marginLeft="@dimen/margin_left_text"
                android:textSize="@dimen/setting_text_size"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="14dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_icon"
                android:src="@drawable/ic_setting_message"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_message"
                android:textColor="@color/setting_text_color"
                android:layout_marginLeft="@dimen/margin_left_text"
                android:textSize="@dimen/setting_text_size"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="2dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_icon"
                android:src="@drawable/ic_setting_contact"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_contact"
                android:textColor="@color/setting_text_color"
                android:layout_marginLeft="@dimen/margin_left_text"
                android:textSize="@dimen/setting_text_size"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
