<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:background="@drawable/background_setting_menu"
    android:layout_height="match_parent"
>
    <EditText
        android:id="@+id/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@null"
        android:textColor="#1684fd" />
    <View
        android:id="@+id/line_bot"
        style="@style/LineDividerStyle"
        android:background="@color/color_line_divider"
        android:layout_below="@+id/lbl_title"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
    />
    <RelativeLayout
        android:id="@+id/layout_call"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_title">
        <ImageView
            android:id="@+id/icon_call"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_phone_red"
        />
        <TextView
            android:id="@+id/lbl_call_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/icon_call"
            android:layout_alignTop="@+id/icon_call"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_toEndOf="@+id/icon_call"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/option_call"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@+id/layout_call">
        <ImageView
            android:id="@+id/icon_text"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/ic_setting_message"/>
        <TextView
            android:id="@+id/lbl_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/icon_text"
            android:layout_alignTop="@+id/icon_text"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_toEndOf="@+id/icon_text"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/option_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@+id/layout_message">
        <ImageView
            android:id="@+id/icon_add_contact"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_add_new_contact_violet"
        />
        <TextView
            android:id="@+id/lbl_text_add_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/icon_add_contact"
            android:layout_alignTop="@+id/icon_add_contact"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_toEndOf="@+id/icon_add_contact"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/option_add_contact"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_copy"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_add_contact">
        <ImageView
            android:id="@+id/icon_copy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:tint="@color/color_icon_copy"
            android:src="@drawable/ic_copy"
        />
        <TextView
            android:id="@+id/lbl_text_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/icon_copy"
            android:layout_alignTop="@+id/icon_copy"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_toEndOf="@+id/icon_copy"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/option_copy"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_copy">
        <ImageView
            android:id="@+id/icon_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_show_keyboard"
        />
        <TextView
            android:id="@+id/lbl_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/icon_edit"
            android:layout_alignTop="@+id/icon_edit"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_toEndOf="@+id/icon_edit"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/option_edit"/>
    </RelativeLayout>





</RelativeLayout>
